tests/NormalTests/paczka1/small_fuzzy/21317620.err
Error in line 1: 609CczM A891 55,9
Error in line 4: vYM7 A250 14,0
Error in line 9: vYM7 S973 73,4
Error in line 11: 609CczM A250 29,8
Error in line 13: 609CczM S335 93,1
